--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@
 
 @theme {
     --font-display: "Rubik", sans-serif;
+    --breakpoint-sm: 480px;
+    --breakpoint-md: 640px;
+    --breakpoint-lg: 768px;
+    --breakpoint-xl: 1280px;
 }
