--- a/src/output.css
+++ b/src/output.css
@@ -183,40 +183,31 @@
   .static {
     position: static;
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
   .left-1\/2 {
     left: calc(1/2 * 100%);
-  }
-  .z-1 {
-    z-index: 1;
   }
   .z-3 {
     z-index: 3;
   }
   .container {
     width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
+    @media (width >= 480px) {
+      max-width: 480px;
     }
-    @media (width >= 48rem) {
-      max-width: 48rem;
+    @media (width >= 640px) {
+      max-width: 640px;
     }
-    @media (width >= 64rem) {
-      max-width: 64rem;
+    @media (width >= 768px) {
+      max-width: 768px;
     }
-    @media (width >= 80rem) {
-      max-width: 80rem;
+    @media (width >= 1280px) {
+      max-width: 1280px;
     }
     @media (width >= 96rem) {
       max-width: 96rem;
@@ -230,9 +221,6 @@
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
-  }
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
   }
   .contents {
     display: contents;
@@ -258,20 +246,11 @@
   .h-\[68\.83\%\] {
     height: 68.83%;
   }
-  .h-\[206\.5px\] {
-    height: 206.5px;
-  }
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-37 {
-    width: calc(var(--spacing) * 37);
-  }
   .w-37\.5 {
     width: calc(var(--spacing) * 37.5);
-  }
-  .w-111 {
-    width: calc(var(--spacing) * 111);
   }
   .w-111\.75 {
     width: calc(var(--spacing) * 111.75);
@@ -294,41 +273,15 @@
   .max-w-360 {
     max-width: calc(var(--spacing) * 360);
   }
-  .min-w-93 {
-    min-width: calc(var(--spacing) * 93);
-  }
   .min-w-93\.75 {
     min-width: calc(var(--spacing) * 93.75);
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-1\/2 {
-    --tw-translate-x: calc(1/2 * 100%);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-17 {
-    --tw-translate-x: calc(var(--spacing) * 17);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-x-17\.5 {
     --tw-translate-x: calc(var(--spacing) * 17.5);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -340,9 +293,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -404,9 +354,6 @@
   .bg-red-400 {
     background-color: var(--color-red-400);
   }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
@@ -457,9 +404,6 @@
   }
   .uppercase {
     text-transform: uppercase;
-  }
-  .underline {
-    text-decoration-line: underline;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -521,48 +465,48 @@
       }
     }
   }
+  .md\:h-117 {
+    @media (width >= 640px) {
+      height: calc(var(--spacing) * 117);
+    }
+  }
   .md\:w-8\/10 {
-    @media (width >= 48rem) {
+    @media (width >= 640px) {
       width: calc(8/10 * 100%);
     }
   }
   .md\:w-\[70\.3\%\] {
-    @media (width >= 48rem) {
+    @media (width >= 640px) {
       width: 70.3%;
     }
   }
   .md\:w-\[75\.3\] {
-    @media (width >= 48rem) {
+    @media (width >= 640px) {
       width: 75.3;
     }
   }
-  .md\:gap-0 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 0);
-    }
-  }
   .md\:gap-y-0 {
-    @media (width >= 48rem) {
+    @media (width >= 640px) {
       row-gap: calc(var(--spacing) * 0);
     }
   }
   .lg\:flex {
-    @media (width >= 64rem) {
+    @media (width >= 768px) {
       display: flex;
     }
   }
   .lg\:hidden {
-    @media (width >= 64rem) {
+    @media (width >= 768px) {
       display: none;
     }
   }
   .lg\:w-\[77\%\] {
-    @media (width >= 64rem) {
+    @media (width >= 768px) {
       width: 77%;
     }
   }
   .lg\:flex-row {
-    @media (width >= 64rem) {
+    @media (width >= 768px) {
       flex-direction: row;
     }
   }
