--- a/src/output.css
+++ b/src/output.css
@@ -9,7 +9,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-950: oklch(28.2% 0.091 267.935);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -183,11 +182,17 @@
   .static {
     position: static;
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -249,8 +254,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-37 {
+    width: calc(var(--spacing) * 37);
+  }
   .w-37\.5 {
     width: calc(var(--spacing) * 37.5);
+  }
+  .w-111 {
+    width: calc(var(--spacing) * 111);
   }
   .w-111\.75 {
     width: calc(var(--spacing) * 111.75);
@@ -273,15 +284,33 @@
   .max-w-360 {
     max-width: calc(var(--spacing) * 360);
   }
+  .min-w-93 {
+    min-width: calc(var(--spacing) * 93);
+  }
   .min-w-93\.75 {
     min-width: calc(var(--spacing) * 93.75);
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .translate-x-17 {
+    --tw-translate-x: calc(var(--spacing) * 17);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-x-17\.5 {
     --tw-translate-x: calc(var(--spacing) * 17.5);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -293,6 +322,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -405,6 +437,9 @@
   .uppercase {
     text-transform: uppercase;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -465,9 +500,39 @@
       }
     }
   }
+  .md\:top-0 {
+    @media (width >= 640px) {
+      top: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:h-32 {
+    @media (width >= 640px) {
+      height: calc(var(--spacing) * 32);
+    }
+  }
+  .md\:h-96 {
+    @media (width >= 640px) {
+      height: calc(var(--spacing) * 96);
+    }
+  }
   .md\:h-117 {
     @media (width >= 640px) {
       height: calc(var(--spacing) * 117);
+    }
+  }
+  .md\:h-211 {
+    @media (width >= 640px) {
+      height: calc(var(--spacing) * 211);
+    }
+  }
+  .md\:h-\[72\.4\%\] {
+    @media (width >= 640px) {
+      height: 72.4%;
+    }
+  }
+  .md\:h-\[75\.2\%\] {
+    @media (width >= 640px) {
+      height: 75.2%;
     }
   }
   .md\:w-8\/10 {
@@ -485,9 +550,82 @@
       width: 75.3;
     }
   }
+  .md\:w-\[130\%\] {
+    @media (width >= 640px) {
+      width: 130%;
+    }
+  }
+  .md\:translate-x-1\/3 {
+    @media (width >= 640px) {
+      --tw-translate-x: calc(1/3 * 100%);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-1\/4 {
+    @media (width >= 640px) {
+      --tw-translate-x: calc(1/4 * 100%);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-1\/5 {
+    @media (width >= 640px) {
+      --tw-translate-x: calc(1/5 * 100%);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-1\/6 {
+    @media (width >= 640px) {
+      --tw-translate-x: calc(1/6 * 100%);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-1\/7 {
+    @media (width >= 640px) {
+      --tw-translate-x: calc(1/7 * 100%);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-\[15\%\] {
+    @media (width >= 640px) {
+      --tw-translate-x: 15%;
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-x-\[20\%\] {
+    @media (width >= 640px) {
+      --tw-translate-x: 20%;
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-y-0 {
+    @media (width >= 640px) {
+      --tw-translate-y: calc(var(--spacing) * 0);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:gap-18 {
+    @media (width >= 640px) {
+      gap: calc(var(--spacing) * 18);
+    }
+  }
   .md\:gap-y-0 {
     @media (width >= 640px) {
       row-gap: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:gap-y-18 {
+    @media (width >= 640px) {
+      row-gap: calc(var(--spacing) * 18);
+    }
+  }
+  .md\:text-\[48px\] {
+    @media (width >= 640px) {
+      font-size: 48px;
+    }
+  }
+  .md\:text-\[12\] {
+    @media (width >= 640px) {
+      color: 12;
     }
   }
   .lg\:flex {
